# ImageRegistration

./: CMakeLists.txt
bluid/: CMakeCache.txt  Makefile  cmake_install.cmake
data/: referencemodif.pgm  test.pgm
include/: ApplyTransfo.h  DeformeImage.h  FonctionCout.h  Interpolation.h  ReadFromFile.h  Recalage.h  Similarity.h  amoeba.h
src/: ApplyTransfo.cpp  DeformeImage.cpp  FonctionCout.cpp  Interpolation.cpp  ReadFromFile.cpp  Recalage.cpp  Similarity.cpp  main.cpp
